# aoc_boiler

./: Cargo.toml  README.md
aoc_helpers/: Cargo.toml
aoc_helpers/src/: config.rs  helpers.rs  input.rs  lib.rs
aoc_macro/: Cargo.toml
aoc_macro/src/: lib.rs
