[package]
name = "aoc_helpers"
version = "1.0.1"
authors = ["Joakim Hulthe <joakim@hulthe.net>"]
edition = "2021"

[dependencies]
regex = "1"
indicatif = "0.16"
xdg = "2"
structopt="0.3"
hex = "0.4"
toml = "0.5"
ron = "0.7"
serde = "1"
serde_derive = "1"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "rustls-tls", "cookies"]

